--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@
 
 
 
-#spring.datasource.url=jdbc:postgresql://dpg-co8j2fgl5elc738vn8a0-a.oregon-postgres.render.com/crud_database_4uaw
-#spring.datasource.username=crud_database_4uaw_user
-#spring.datasource.password=VHfHkSh79egOKLc5AgIWAe67VSEPMHhO
+spring.datasource.url=jdbc:postgresql://dpg-co8j2fgl5elc738vn8a0-a/crud_database_4uaw
+spring.datasource.username=crud_database_4uaw_user
+spring.datasource.password=VHfHkSh79egOKLc5AgIWAe67VSEPMHhO
 
 #jpa Configurations
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/fullstack_backend
-spring.datasource.username=root
-spring.datasource.password=Vishwa@data123
+#spring.datasource.url=jdbc:mysql://localhost:3306/fullstack_backend
+#spring.datasource.username=root
+#spring.datasource.password=Vishwa@data123
